name:                ren
version:             0.2.0.0
synopsis:            Simple utility to interactively rename files
description:         Please see README.md
homepage:            https://github.com/kqr/ren#readme
license:             BSD3
license-file:        LICENSE
author:              kqr
maintainer:          k@rdw.se
copyright:           2016 kqr
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ren
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , directory
                     , system-filepath
                     , brick
                     , vty
                     , text-zipper
                     , microlens
                     , microlens-th
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kqr/ren
